@@ -6,6 +6,8 @@
 
 	* ipmi-fru/: Add --fru-file option.
 
+	* libfreeipmi/: Add ipmi_cmd_write_fru_data function.
+
 2016-05-20 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/spec/enterprise-numbers.pl: Handle header and all
